# swim

./: .gitignore  CMakeLists.txt  LICENSE.LGPLv3
examples/window/: CMakeLists.txt  window.c
include/swim/: debug.h  keyboard_key.h  mouse_button.h  stdlib.h  window.h
include/swim/native/: window.h
include/swim/window/: event_handler.h  event_handlers.h  keyboard_event_handler.h  mouse_event_handler.h
platform/linux.x11/: build.cmake
platform/linux.x11/src/swim/native/: window.c
src/swim/: stdlib.c  window.c
src/swim/native/: window.x11.c
src/swim/window/: event_handlers.c
